data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4207.wast
;; 6. **Test Description**: Implement a `loop` that uses `call_indirect` and checks if stack operations' results are correctly placed back on the operand stack, and prevents stack overflow.    - *Constraint Checked*: Proper stack operations and result handling.    - *Infinite Loop Context*: Error or trap during stack operations should break the loop.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $func)
    (func $func (param i32) (result i32)
      (i32.const 0)
    )
    (func $loop
      (loop $label
        (call_indirect (type 0) (i32.const 0) (i32.const 0))
        (br $label)
      )
    )
  )
  "type mismatch"
)